charts/zabbix/skipti-zabbix-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      client_body_timeout 12;
      client_header_timeout 12;
      keepalive_timeout 20;
      keepalive_requests 150;

       proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection keep-alive;
         proxy_set_header   Host $host;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_read_timeout 3600;

      gzip on;
      gzip_comp_level    6;
      gzip_min_length    256;
      gzip_proxied       any;
      gzip_vary          on;
      gzip_types
      application/atom+xml
      application/javascript
      application/json
      application/ld+json
      application/manifest+json
      application/rss+xml
      application/vnd.geo+json
      application/vnd.ms-fontobject
      application/x-font-ttf
      application/x-web-app-manifest+json
      application/xhtml+xml
      application/xml
      font/opentype
      image/bmp
      image/svg+xml
      image/x-icon
      text/cache-manifest
      text/css
      text/plain
      text/vcard
      text/vtt
      text/x-component
      text/x-cross-domain-policy;
      add_header          X-Content-Type-Options nosniff;
      add_header          X-Frame-Options SAMEORIGIN;
      add_header          X-XSS-Protection "1; mode=block";
      add_header          X-Content-Security-Policy "default-src=self";
  generation: 2
  name: qa-skipti-routes-service
  namespace: zabbix
spec:
  rules:
  - host: zabbix.skipti.com
    http:
      paths:
      - backend:
          service:
            name: test-zabbix-zabbix-web
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - zabbix.skipti.com
    secretName: skipti-crt
